# stylometry_exercises

./: .gitmodules  .pre-commit-config.yaml  README.md  analysis.py  chisquare.py  chisquared.py  constants.py  delta_method.py  load_data.py  main.py  pyproject.toml  requirements.txt  setup.py  utils.py  word_spectrum.py
stylometer/: __init__.py  chisquared.py  constants.py  delta_method.py  helpers.py  load_data.py  main.py  word_spectrum.py
